--- a/.github/workflows/environment_create.yml
+++ b/.github/workflows/environment_create.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     types: [opened, reopened]
 
+  workflow_dispatch:
+
 concurrency: ${{ github.event.number || github.ref_name }}
 
 jobs:
